force-app/main/default/objects/Monthly_Fee__mdt/Monthly_Fee__mdt.object-meta.xml
<CustomObject>
    <label>Monthly Fee</label>
    <pluralLabel>Monthly Fees</pluralLabel>
</CustomObject>