force-app/main/default/objects/Monthly_Fee__mdt/fields/Payment_Plan_Info__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Info__c</fullName>
    <description>Relationship to Payment Plan Info CMDT</description>
    <inlineHelpText>Relationship to Payment Plan Info CMDT</inlineHelpText>
    <label>Payment Plan Info</label>
    <referenceTo>Payment_Plan_Info__mdt</referenceTo>
    <relationshipLabel>Monthly Fees</relationshipLabel>
    <relationshipName>Monthly_Fees</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>