force-app/main/default/objects/Monthly_Fee__mdt/listViews/All_Monthly_Fees.listView-meta.xml
<ListView>
    <fullName>All_Monthly_Fees</fullName>
    <columns>MasterLabel</columns>
    <columns>Numeric_Births__c</columns>
    <columns>Sum_of_Products__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Plan_Info__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>All Monthly Fees</label>
</ListView>